--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
         }
     ],
     "require": {
-        "laravel/framework": "~6.0",
-        "php": "~7.0"
+        "laravel/framework": "^7.0",
+        "php": "^7.2.5"
     },
     "require-dev": {
         "orchestra/testbench": "~4.0",
