--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
         "php": "^7.3.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~4.0",
-        "phpunit/phpunit": "^8.3"
+        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^8.3",
+        "shomisha/stubless": "^1.1.0"
     },
     "autoload": {
         "psr-4": {
