--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     ],
     "require": {
         "laravel/framework": "^8.0",
-        "php": "^7.3.0"
+        "php": "^7.4.0",
+        "shomisha/stubless": "^1.4.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^8.3",
-        "shomisha/stubless": "^1.1.0"
     },
     "autoload": {
         "psr-4": {
