--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
     "require": {
         "laravel/framework": "^8.0",
-        "php": "^7.4.0",
+        "php": "^7.4.0|^8.0",
         "shomisha/stubless": "^1.4.0"
     },
     "require-dev": {
