--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,12 +10,11 @@ jobs:
       matrix:
         php: [8.1, 8.0]
         laravel: [9.*]
-        dependency-version: [prefer-lowest, prefer-stable]
         include:
           - laravel: 9.*
             testbench: ^7.0
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
+    name: P${{ matrix.php }} - L${{ matrix.laravel }}
 
     steps:
       - name: Update apt
@@ -33,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           composer require "laravel/framework:${{ matrix.laravel }}"
-          composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
+          composer update --prefer-stable --prefer-dist --no-interaction
 
       - name: Execute tests
         run: vendor/bin/phpunit --configuration ./tests/phpunit.xml --bootstrap vendor/autoload.php
