--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,11 +8,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [8.1, 8.0]
-        laravel: [9.*]
+        php: [8.1]
+        laravel: [10.*]
         include:
-          - laravel: 9.*
-            testbench: ^7.0
+          - testbench: ^8.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }}
 
